--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/* General Styles  */ 
+/* General Styles */
 html, body {
-    height: 100%; 
+    height: 100%;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -23,13 +23,12 @@ body {
     align-items: center;
     padding: 15px 0;
     width: 100%;
-    max-width: 1200px;
+    max-width: 120px;
    
 }
-
-.logo-container img {
-    height: 70px;
-    width: auto;
+.im{
+    width:300px;
+    height:auto;
 }
 
 /* Info Container */
