--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 body {
-    background-color: #f4f4f9;
+    background-color: #c0c0c0;
     display: flex;
     flex-direction: column;
     align-items: center;
