--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ html, body {
     border: none;
     border-radius: 10px;
     text-align: center;
-    width: 100%;
+    width: 300px;
     max-width: 400px;
     font-size: 16px;
     cursor: pointer;
