--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ html, body {
     border-radius: 10px;
     text-align: center;
     width: 300px;
+    height: 100px;
     max-width: 400px;
     font-size: 16px;
     cursor: pointer;
